# sem8-LANSS-labs

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  ping.c  types.h  utils.c  utils.h
lab2/: CMakeLists.txt  chat.c  chat.h  member_list.c  member_list.h  types.h
